#129 Add status endpoint
